tests/struct/duplicate_method.rz
struct Foo {
    fn a() {}
    fn a() {} // error: a method with the same name as already been declared in this scope
}
